# learning-rust

./: .gitmodules  .pre-commit-config.yaml  README.md
04-understanding_ownership/4.2-references_and_borrowing/: Cargo.toml
07-managing_growing_projects_with_packages_crates_and_modules/7.2-defining_modules_to_control_scope_and_privacy/: Cargo.toml
07-managing_growing_projects_with_packages_crates_and_modules/7.3-paths_for_referring_to_an_item_in_the_module_tree/: Cargo.toml
08-common_collections/8.2-storing_utf_8_encoded_text_with_strings/: Cargo.toml
08-common_collections/8.3-storing_keys_with_associated_values_in_hash_maps/: Cargo.toml
09-error_handling/9.3-to_panic_or_not_to_panic/: Cargo.toml
14-more_about_cargo_and_crates_io/14.1-customizing_builds_with_release_profiles/: Cargo.toml
14-more_about_cargo_and_crates_io/14.2-publishing_a_crate_to_crates_io/: Cargo.toml
15-smart_pointers/15.4-rc_t_the_reference_counted_smart_pointer/: Cargo.toml
15-smart_pointers/15.5-ref_cell_t_and_the_interior_mutability_pattern/: Cargo.toml
17-object_oriented_programming_features_of_rust/17.2-using_trait_objects_that_allow_for_values_of_different_types/: Cargo.toml
adder/src/: lib.rs
books/action/: README.md
books/action/08-networking/mget/: Cargo.toml  setup.sh  teardown.sh
books/action/08-networking/mget/src/: dns.rs
books/action/09-time_and_timekeeping/clock2/: Cargo.toml
books/action/09-time_and_timekeeping/clock2/src/: main.rs
books/action/09-time_and_timekeeping/clock3/: Cargo.toml
books/action/09-time_and_timekeeping/clock3/src/: main.rs
books/action/11-kernel/fledgeos-4/: Cargo.toml
chapter9/: hello.txt
functional-book/: intro_generics.rs
functional-book/1-functional_programming/: Cargo.toml
functional-book/1-functional_programming/1.1-intro_generics/: Cargo.toml
functional-book/1-functional_programming/1.1-making_generics_more_generic/: Cargo.toml
functional-book/1-functional_programming/1.1-making_generics_more_generic/src/: main.rs
functional-book/1-functional_programming/1.2-functions_as_values/: Cargo.toml
functional-book/1-functional_programming/1.3-iterators/src/: main.rs
functional-book/1-functional_programming/1.4-compact_legible_expressions/: Cargo.toml
functional-book/1-functional_programming/1.4-compact_legible_expressions/src/: main.rs
functional-book/1-functional_programming/1.5-scoped_data_binding/: Cargo.toml
functional-book/1-functional_programming/1.5-scoped_data_binding/src/: main.rs
guessing_game/: Cargo.toml
hello_cargo/: Cargo.toml
hello_world/: main  main.rs
minigrep/: output.txt
my-project/: Cargo.toml
(+1707 files in other folders)
