[package]
name = "mget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.2.5"
rand = "0.8.5"
smoltcp = { version = "0.8.1", features = [
  "proto-igmp",
  "proto-ipv4",
  "verbose",
  "log"
] }
trust-dns = { version = "0.21.2", default-features = false }
url = "2.2.2"
