[package]
name = "clock2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.19"
clap = "3.2.5"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.3.9"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.126"
